maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:29: error: reassignment to val
      case 0 => avanceVersNord(); etat = 1;
                                       ^IslandMaze:31: error: reassignment to val
      case 1 => suitAGauche(); etat = 0;
                                    ^